--- a/src/main/resources/templates/buddies.html
+++ b/src/main/resources/templates/buddies.html
@@ -34,32 +34,28 @@
     <thead>
     <tr>
         <th class="display"> ID</th>
-        <th class="display"> Name</th>
-        <th class="display"> Address</th>
-        <th class="display"> Phone Number</th>
+        <th class="display"> Question</th>
+        <th class="display"> Answer</th>
     </tr>
     </thead>
     <tbody>
-    <tr th:each="buddy : ${buddies}">
-        <td class="display" th:text="${buddy.id}">N/A</td>
-        <td class="display" th:text="${buddy.name}">N/A</td>
-        <td class="display" th:text="${buddy.getAddress}">N/A</td>
-        <td class="display" th:text="${buddy.phoneNumber}">N/A</td>
+    <tr th:each="question : ${questions}">
+        <td class="display" th:text="${question.id}">N/A</td>
+        <td class="display" th:text="${question.question}">N/A</td>
+        <td class="display" th:text="${question.answer}">N/A</td>
     </tr>
     </tbody>
 </table>
-<h2>Add new Buddy</h2>
-<form id="add" action="/buddies/add" method="POST">
-    <label style="padding-right: 58px" for="name">Name: </label>
-    <input type="text" id="name" name="name"><br>
-    <label style="padding-right: 44px" for="address">Address: </label>
-    <input type="text" id="address" name="address"><br>
-    <label for="phoneNumber">Phone Number: </label>
-    <input type="text" id="phoneNumber" name="phoneNumber"><br>
+<h2>Add new Question</h2>
+<form id="add" action="/questions/add" method="POST">
+    <label style="padding-right: 58px" for="question">Name: </label>
+    <input type="text" id="question" name="question"><br>
+    <label style="padding-right: 44px" for="answer">Address: </label>
+    <input type="text" id="answer" name="answer"><br>
     <input type="submit" value="Submit">
 </form>
-<h2>Remove Buddy</h2>
-<form id="del" action="/buddies/del" method="POST">
+<h2>Remove Question</h2>
+<form id="del" action="/questions/del" method="POST">
     <label style="padding-right: 58px" for="id">Name: </label>
     <input type="number" id="id" name="id"><br>
     <input type="submit" value="Submit">
