--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -6,7 +6,7 @@
     <script defer type="text/javascript" th:src="@{updater.js}"></script>
 </head>
 <body>
-<h1>Address Book</h1>
+<h1>Survey</h1>
 <style>
     table {
         border-collapse: separate;
@@ -46,17 +46,15 @@
     </tr>
     </tbody>
 </table>
-<h2>Add new Question</h2>
+<h2>Add New Question</h2>
 <form id="add" action="/questions/add" method="POST">
-    <label style="padding-right: 58px" for="question">Name: </label>
+    <label style="padding-right: 58px" for="question">Question: </label>
     <input type="text" id="question" name="question"><br>
-    <label style="padding-right: 44px" for="answer">Address: </label>
-    <input type="text" id="answer" name="answer"><br>
     <input type="submit" value="Submit">
 </form>
 <h2>Remove Question</h2>
 <form id="del" action="/questions/del" method="POST">
-    <label style="padding-right: 58px" for="id">Name: </label>
+    <label style="padding-right: 58px" for="id">ID: </label>
     <input type="number" id="id" name="id"><br>
     <input type="submit" value="Submit">
 </form>
