--- a/src/main/resources/templates/poll.html
+++ b/src/main/resources/templates/poll.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Survey</h1>
 <h2>Username</h2>
-<form id="add" action="/polls" method="POST">
+<form id="add" action="/submitAnswers" method="POST">
     <label style="padding-right: 58px" for="answer">Name: </label>
     <input type="text" id="answer" th:name="answer"><br>
     <input type="submit" value="Submit">
