feat: Access all polls from index and added css

--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+    <a href="/">Home</a><br>
     <h1>Survey</h1>
     <h2 th:text="'Owner: ' + ${survey.getCreator()}"></h2>
     <h2 th:text="'Number Of Questions: ' + ${questions.size()}"></h2>
