--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Monkey Survey</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" th:href="@{index.css}">
 </head>
 <body>
     <h1>Monkey Survey</h1>
-    <a href="poll">Poll 1</a>
+    <table>
+        <th:block th:each="survey : ${surveys}">
+            <tr>
+                <td><a th:href="'/survey/' + ${survey.getId()}" th:text="'Survey ' + ${survey.getId()}"></a></td>
+                <td><a th:href="'/results/' + ${survey.getId()}" th:text="'Results ' + ${survey.getId()}"></a></td>
+            </tr>
+        </th:block>
+    </table>
 </body>
 </html>
