(feat) Added css to results page to match the questions page.

--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -24,66 +24,54 @@
         color: #000000;
     }
 </style>
-<!--<head>-->
-<!--    <title>Results Page</title>-->
-<!--    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>-->
-<!--    <h1>Results</h1>-->
-<!--</head>-->
-<!--    <body>-->
-<!--        <h2 th:text ="'Question Posed: ' + ${results[0].question}">n/a </h2>-->
-<!--        <h3 th:text ="'People Polled: ' + ${results.size}">n/a </h3>-->
-<!--        <table>-->
-<!--            <thead>-->
-<!--            <tr>-->
-<!--                <th class = "display"> ID</th>-->
-<!--                <th class = "display"> Answer</th>-->
-<!--            </tr>-->
-<!--            </thead>-->
-<!--            <tbody>-->
-<!--            <tr th:each="result: ${results}">-->
-<!--                <td class = "display" th:text="${result.id}">n/a</td>-->
-<!--                <td class = "display"  th:text="${result.answer}"> n/a</td>-->
-<!--            </tr>-->
-<!--            </tbody>-->
-<!--        </table>-->
-<!--    </body>-->
 
 <head>
     <title>Results Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <h1>Results</h1>
+    <link rel="stylesheet" th:href="@{/results.css}">
 </head>
 <body>
-<table>
-    <tr th:each ="survey: ${surveys}">
-        <td>
-            <h2 th:text ="'Survey: ' + ${survey.id}">n/a </h2>
-            <h3 th:text ="'Created by: ' + ${survey.creator}">n/a </h3>
-            <h3 th:text ="'Number of Questions: ' + ${survey.questions.size}">n/a </h3>
-            <table>
-                <tr th:each ="question: ${survey.questions}">
-                    <td valign="top">
-                        <h4 th:text ="'Question: ' + ${question.question}">n/a </h4>
-                        <h4 th:text ="'Number of Responses: ' + ${question.results.size}">n/a </h4>
-                    </td>
-                    <td>
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th class = "display">Responses</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each ="result: ${question.results}">
-                                    <td class = "display"  th:text="${result.answer}"> n/a</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
+    <div id="container">
+        <div id="header">
+            <div id="headerItems">
+                <h1 id="company">MonkeySurvey*</h1>
+                <p id="logo">Replace with logo</p>
+            </div>
+        </div>
 
+        <div id="body">
+            <div id="options">
+                <a class="optionValue" href="/">Home</a><br>
+            </div>
+            <th:block th:each="survey : ${surveys}">
+                <div id="survey">
+                    <div id="surveyHeader">
+                        <h1 id="surveyTitle">Survey Title</h1>
+                        <div id="surveyInfo">
+                            <h2 id="surveyInfoOwner" th:text="'Creator: ' + ${survey.creator}"></h2>
+                            <h2 id="surveyInfoNumberOfQuestions" th:text="'Number of Questions: ' + ${survey.questions.size}"></h2>
+                        </div>
+                    </div>
+                    <div id="surveyQuestions">
+                        <th:block th:each="question : ${survey.questions}">
+                            <div class="question">
+                                <h2 class="questionTitle" th:text="${question.getQuestion()}"></h2>
+                                <h2 class="questionResponsesCount" th:text="'Number of Responses: ' + ${question.results.size}"></h2>
+                                <h2 class="questionAnswer" th:text="Results"></h2>
+<!--                                <table>-->
+<!--                                    <tr th:each="result : ${question.results}">-->
+<!--                                        <td class="display" th:text="${result.answer}">N/A</td>-->
+<!--                                    </tr>-->
+<!--                                </table>-->
+                                <th:block th:each="result : ${question.results}">
+                                    <p class = "questionResult"  th:text="${result.answer}"> n/a</p>
+                                </th:block>
+                            </div>
+                        </th:block>
+                    </div>
+                </div>
+            </th:block>
+        </div>
+    </div>
+</body>
 </html>
