--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -1,3 +1,100 @@
+:root {
+    --background: #18191a;
+    --background-container: #18191a;
+    --background-header: #2E4272;
+    --background-options: #2E4272;
+    --background-survey: #353637;
+    --foreground-text: aliceblue;
+    --foreground-text-questions: black;
+}
+
+body {
+    background-color: var(--background);
+}
+
+table {
+    background-color: var(--foreground-text);
+    border-radius: 5px;
+    padding: 0 20% 2% 20%;
+    margin: 0 auto;
+    width: 100%;
+    white-space: nowrap;
+}
+
 td {
-    padding-right: 2cm;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.surveyValue {
+    font-weight: bold;
+    text-decoration: none;
+}
+
+#container {
+    background-color: var(--background-container);
+    display: flex;
+    margin: 0 auto;
+    width: 80%;
+    flex-direction: column;
+}
+
+#header {
+    display: flex;
+    flex-direction: column;
+    margin:0 auto;
+    width: 100%;
+}
+
+#headerItems {
+    background-color: var(--background-header);
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+#company {
+    color: var(--foreground-text);
+    padding-left: 1%;
+}
+
+#logo {
+    color: var(--foreground-text);
+    margin: auto 0 auto auto;
+    padding-right: 1%;
+}
+
+#body {
+    display: flex;
+    flex-direction: row;
+    margin-top: 1%;
+    width: 100%;
+}
+
+#options {
+    white-space: nowrap;
+    background-color: var(--background-options);
+}
+
+.optionValue {
+    color: var(--foreground-text);
+    position: relative;
+    text-decoration: none;
+    top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#survey {
+    background-color: var(--background-survey);
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
+    margin-left: 1%;
+    width: 100%;
+    height: 100%;
+}
+
+#surveyTitle {
+    color: var(--foreground-text);
 }
