--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Survey</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
