updates: Made project work with public and private surveys

--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th=":http://www.thymeleaf.or">
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <style>
     table {
         border-collapse: separate;
@@ -46,9 +45,8 @@
             <th:block th:each="survey : ${surveys}">
                 <div id="survey">
                     <div id="surveyHeader">
-                        <h1 id="surveyTitle">Survey Title</h1>
+                        <h1 id="surveyTitle" th:text="${survey.getSurveyName()}"></h1>
                         <div id="surveyInfo">
-                            <h2 id="surveyInfoOwner" th:text="'Creator: ' + ${survey.creator}"></h2>
                             <h2 id="surveyInfoNumberOfQuestions" th:text="'Number of Questions: ' + ${survey.questions.size}"></h2>
                         </div>
                     </div>
