(Feat) Added survey admin page for once a user is logged in where surveys can be open/closed/added from.

--- a/src/main/resources/templates/createSurvey.html
+++ b/src/main/resources/templates/createSurvey.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Create a New Survey</h1>
-    <form id="form" action="/createSurveyPost" method="post">
+    <form id="form" th:action="@{/createSurveyPost}" method="post">
         <table id="name" class="table3"><tr>
             <td>
                 <b>Name</b><br>
