--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
         <div id="body">
             <div id="options">
                 <a class="optionValue" href="/">Home</a>
-                <p><a class="optionValue" href="/">My Surveys</a></p>
+                <p class="authenticated"><a class="optionValue" href="/mySurveys">My Surveys</a></p>
                 <p class="unauthenticated"><a class="optionValue" href="/oauth2/authorization/github">Login</a></p>
                 <div class="authenticated">
                     <p><span class="optionValue" id="user"></span></p>
