--- a/src/main/resources/templates/mySurveys.html
+++ b/src/main/resources/templates/mySurveys.html
@@ -33,8 +33,7 @@
     <div id="container">
         <div id="header">
             <div id="headerItems">
-                <h1 id="company">MonkeySurvey*</h1>
-                <p id="logo">Replace with logo</p>
+                <img th:src="@{/media/logo.gif}" style="width:40%">
             </div>
         </div>
 
