--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -27,28 +27,25 @@
                 <form th:action="@{/submitAnswers} + '/' + ${survey.getId()}" method="post">
                     <div class="question" th:each="question : ${stringQuestions}">
                         <h2 class="questionTitle" th:text="${question.getQuestion()}"></h2>
-                            <label th:for="${question.getId()}">
-                                <input th:if="${question.isMandatory()}" class="questionAnswer" th:type="${question.getType()}" th:id="${question.getId()}" th:name="${question.getId()}" required/>
-                                <input th:if="${!question.isMandatory()}" class="questionAnswer" th:type="${question.getType()}" th:id="${question.getId()}" th:name="${question.getId()}"/>
-                            </label>
+                            <th:block th:text="${question.getHTML()}"></th:block>
                     </div>
                     <div class="question" th:each="question : ${optionQuestions}">
                         <h2 class="questionTitle" th:text="${question.getQuestion()}"></h2>
                         <th:block th:switch="${question.isMultipleSelect()}">
                             <label th:case="false" th:for="${question.getId()}">
                                 <select th:if="${question.isMandatory()}" th:id="${question.getId()}" th:name="${question.getId()}" required>
-                                    <option th:each="answer : ${question.getAnswers()}" th:value="${answer}" th:text="${answer}"></option>
+                                    <option th:each="answer : ${question.getOptions()}" th:value="${answer}" th:text="${answer}"></option>
                                 </select>
                                 <select th:if="${!question.isMandatory()}" th:id="${question.getId()}" th:name="${question.getId()}">
-                                    <option th:each="answer : ${question.getAnswers()}" th:value="${answer}" th:text="${answer}"></option>
+                                    <option th:each="answer : ${question.getOptions()}" th:value="${answer}" th:text="${answer}"></option>
                                 </select>
                             </label>
                             <label th:case="true" th:for="${question.getId()}">
                                 <select th:if="${question.isMandatory()}" th:id="${question.getId()}" th:name="${question.getId()}" multiple required>
-                                    <option th:each="answer : ${question.getAnswers()}" th:value="${answer}" th:text="${answer}"></option>
+                                    <option th:each="answer : ${question.getOptions()}" th:value="${answer}" th:text="${answer}"></option>
                                 </select>
                                 <select th:if="${!question.isMandatory()}" th:id="${question.getId()}" th:name="${question.getId()}" multiple>
-                                    <option th:each="answer : ${question.getAnswers()}" th:value="${answer}" th:text="${answer}"></option>
+                                    <option th:each="answer : ${question.getOptions()}" th:value="${answer}" th:text="${answer}"></option>
                                 </select>
                             </label>
                         </th:block>
